Update Help section

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ a { color: hotpink; }
 <span class="notesBlockquote">&gt; </span><span class="notesDelimiter">**</span><span class="notesBold">definition</span><span class="notesDelimiter">**</span>
 <span class="notesBlockquote">&gt; </span>precision.
 &lt;variable_placeholder&gt;
+<span class="notesDelimiter">`</span><span class="notesCode">$ commandline</span><span class="notesDelimiter">`</span>
 <span class="notesDelimiter">`</span><span class="notesCode">- remove text</span><span class="notesDelimiter">`</span>
 <span class="notesDelimiter">`</span><span class="notesCode">+ insert text</span><span class="notesDelimiter">`</span>
 <span class="notesDelimiter">`</span><span class="notesCode">&gt; change text</span><span class="notesDelimiter">`</span>
