--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ a { color: hotpink; }
 <span class="notesH1">#INDEX</span>
 ------
 <span class="notesH1">##  Help</span>
-<span class="notesH1">##  Post-it</span>
+<span class="notesH1">##  Misc</span>
 <span class="notesH1">##  Server</span>
 <span class="notesH1">###     VM</span>
 <span class="notesH1">###     Install</span>
@@ -43,7 +43,7 @@ a { color: hotpink; }
 <span class="notesH1">###     Comfort</span>
 <span class="notesH1">###     Sudoers</span>
 <span class="notesH1">###     UFW</span>
-<span class="notesH1">###     SSH Daemon</span>
+<span class="notesH1">###     SSH</span>
 <span class="notesH1">###     SSH Connection</span>
 <span class="notesH1">###     Password Policy</span>
 <span class="notesH1">###     Update Passwords</span>
@@ -69,7 +69,7 @@ a { color: hotpink; }
 <span class="notesDelimiter">`</span><span class="notesCode">&gt; change text</span><span class="notesDelimiter">`</span>
 <span class="notesUrl"><a href="https://www.external_link">https://www.external_link</a></span>
 
-<span class="notesH1">###     Misc</span>
+<span class="notesH1">##  Misc</span>
 
 <span class="notesListMarker">*</span> Services:
 
