--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ Create the logical partitions:
 
  -&gt;<span class="notesCode">Create logical volume</span> -&gt;<span class="notesCode">LVMGroup</span>
  Logical volume name: <span class="notesCode">var-log</span>
- Logical volume size: <span class="notesCode">1056MG</span>
+ Logical volume size: <span class="notesCode">1056MB</span>
 
  -&gt;<span class="notesCode">Finish</span>
 
